src/objects/Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription_Id__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Unit__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Occurrances__c</columns>
    <columns>Length__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>